--- a/.drone.yml
+++ b/.drone.yml
@@ -9,7 +9,7 @@ steps:
 - name: publish
   image: plugins/docker
   settings:
-    username:
+    username: krishi0408
       from_secret: u_docker
     password:
       from_secret: p_docker
