--- a/.drone.yml
+++ b/.drone.yml
@@ -9,7 +9,9 @@ steps:
 - name: publish
   image: plugins/docker
   settings:
+    username:
       from_secret: u_docker
+    password:
       from_secret: p_docker
     repo: krishi0408/nginxhelloworld
     tags: "test_1"
